# assets-tracking-service

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.gitlab/issue_templates/: deploy.md  release.md
docs/: cli-reference.md  config.md  data-model.md  deploy.md  dev.md  dpia.md  exporters.md  implementation.md  info-model.md  infrastructure.md  install-upgrade.md  libraries.md  providers.md  setup.md  tracked-assets.md
exp/: cat.py  md.py
exp/templates/: item.md.j2
provisioning/terraform/: docker-compose.yml  main.tf
resources/env/: .env.tpl
resources/pgsync/: .pgsync.yml.tpl
resources/scripts/: clean-venvs.py
scripts/: clean-venvs.py  create-migration.py  create-release.py  read-pyproject-version.py  recreate-css.py  recreate-local-db.py  release.py
src/assets_tracking_service/: __init__.py  config.py  db.py  log.py  logging.py  units.py
src/assets_tracking_service/cli/: __init__.py  config.py  data.py  db.py
src/assets_tracking_service/exporters/: arcgis.py  base_exporter.py  catalogue.py  exporters_manager.py  geojson.py
src/assets_tracking_service/lib/bas_data_catalogue/exporters/: base_exporter.py  html_exporter.py  iso_exporter.py  json_exporter.py  records_exporter.py  resources_exporter.py  site_exporter.py
src/assets_tracking_service/lib/bas_data_catalogue/models/: item.py  templates.py
src/assets_tracking_service/lib/bas_esri_utils/: arcgis.py  client.py
src/assets_tracking_service/lib/bas_esri_utils/models/: item.py
src/assets_tracking_service/lib/markdown/formats/: plaintext.py
src/assets_tracking_service/models/: asset.py  label.py  layer.py  position.py  provider.py  record.py
src/assets_tracking_service/providers/: aircraft_tracking.py  base_provider.py  geotab.py  providers_manager.py  rvdas.py
src/assets_tracking_service/resources/arcgis_group/: description.md
src/assets_tracking_service/resources/arcgis_layers/ats_latest_assets_position/: portrayal.json
src/assets_tracking_service/resources/db_migrations/down/: 973-rename-layer-summary.sql  974-latest-position-viz.sql  975-fake-objectid.sql  976-util-asset-position-labels.sql  977-most-recent-l06.sql  978-nvs-l06-update-1.sql  979-fix-dms-ddm-typo.sql  980-drop-record-extent.sql  981-collection-record.sql  982-latest-asset-position.sql  983-metadata-record.sql  984-layer.sql  985-rationalise-views.sql  986-migrations-tracking.sql  987-ats-ro-role.sql  988-ensure-geojson-keys-order.sql  989-latest-export-derived-units.sql  990-apply-updated-at.sql  992-summary-views.sql  993-nvs-l06.sql  994-position.sql  995-asset.sql  996-labels.sql  997-ddm.sql  998-ulid.sql  999-extensions.sql
src/assets_tracking_service/resources/db_migrations/up/: 001-extensions.sql  002-ulid.sql  003-ddm.sql  004-labels.sql  005-asset.sql  006-position.sql  007-nvs-l06.sql  008-summary-views.sql  010-apply-updated-at.sql  011-latest-export-derived-units.sql  012-ensure-geojson-keys-order.sql  013-ats-ro-role.sql  014-migrations-tracking.sql  015-rationalise-views.sql  016-layer.sql  017-metadata-record.sql  018-latest-asset-position.sql  019-collection-record.sql  020-drop-record-extent.sql  021-fix-dms-ddm-typo.sql  022-nvs-l06-update-1.sql  023-most-recent-l06.sql  024-util-asset-position-labels.sql  025-fake-objectid.sql  026-latest-position-viz.sql  027-rename-layer-summary.sql
src/assets_tracking_service/resources/records/ats_collection/: abstract.md
src/assets_tracking_service/resources/records/ats_latest_assets_position/: abstract.md  lineage.md
tasks/: migration.py  reset-db.py
tests/: conftest.py  pytest_postgresql.py
tests/assets_tracking_service_tests/: test_config.py  test_db.py  test_logging.py  test_units.py
tests/assets_tracking_service_tests/cli/: test_cli.py  test_config.py  test_data.py  test_db.py
tests/assets_tracking_service_tests/exporters/: test_arcgis.py  test_base_exporter.py  test_catalogue.py  test_exporters_manager.py  test_geojson.py
tests/assets_tracking_service_tests/models/: test_model_asset.py  test_model_label.py  test_model_layer.py  test_model_position.py  test_model_provider.py  test_model_record.py
tests/assets_tracking_service_tests/providers/: test_aircraft_tracking.py  test_base_provider.py  test_geotab.py  test_providers_manager.py  test_rvdas.py
tests/assets_tracking_service_tests/providers/cassettes/test_geotab/: TestGeotabProvider.test_fetch_active_assets.yaml  TestGeotabProvider.test_fetch_device_statuses.yaml  TestGeotabProvider.test_fetch_devices.yaml  TestGeotabProvider.test_fetch_latest_positions.yaml  TestGeotabProvider.test_fetch_log_record.yaml
tests/assets_tracking_service_tests/providers/cassettes/test_rvdas/: TestRvdasProvider.test_fetch_data.yaml  TestRvdasProvider.test_fetch_data_error.yaml  TestRvdasProvider.test_fetch_data_invalid.yaml
tests/db_tests/: test_extension.py  test_func.py
tests/examples/: example_exporter.py  example_provider.py
tests/lib_tests/bas_data_catalogue_tests/e2e/: test_item_e2e.py  test_site_e2e.py
tests/lib_tests/bas_data_catalogue_tests/exporters/: test_base_exporter.py  test_base_exporters.py  test_html_exporter.py  test_html_exporters.py  test_iso_exporter.py  test_iso_exporters.py  test_json_exporter.py  test_records_exporter.py  test_site_exporter.py
tests/lib_tests/bas_data_catalogue_tests/models/: test_item_base.py  test_templates.py
tests/lib_tests/bas_data_catalogue_tests/models/record/: test_record.py  test_summary.py
tests/lib_tests/bas_data_catalogue_tests/templates/: test_catalogue_item.py
tests/lib_tests/bas_esri_utils/: test_client.py
tests/lib_tests/bas_esri_utils/models/: test_item_arcgis.py
tests/lib_tests/markdown/: test_links.py  test_plaintext.py  test_prepend_new_line.py
tests/lib_tests/markdown/formats/: test_plaintext.py
tests/providers/: example_provider.py
tests/resources/examples/: example_exporter.py
tests/resources/lib/data_catalogue/: site_exporter.py
tests/resources/lib/data_catalogue/exporters/: fake_exporter.py
tpl/: .env.tpl  .pgsync.yml.tpl
(+80 files in other folders)
